--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation 'io.rest-assured:rest-assured:4.3.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+
 
 }
 
