aula05 - groovy collection e extract

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation 'io.rest-assured:rest-assured:4.3.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
-
+    implementation 'org.codehaus.groovy:groovy-all:2.5.6'
 
 }
 
